# embedded-tls

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  WINDOWS.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yaml
drogue-tls/: Cargo.toml  build.rs
drogue-tls-sys/: .gitignore  Cargo.toml  build.rs
drogue-tls-sys/include/: config.h  platform_alt.h  string.h
drogue-tls-sys/src/: bindings.rs  lib.rs  types.rs  wrapper.h
drogue-tls/examples/: client.rs  server.rs
drogue-tls/src/: error.rs  io.rs  lib.rs  private.rs  rust_printf.c  self_test.rs  shim.c  threading.rs  wrapper_macros.rs
drogue-tls/src/bignum/: mod.rs
drogue-tls/src/cipher/: mod.rs
drogue-tls/src/cipher/raw/: mod.rs  serde.rs
drogue-tls/src/ecp/: mod.rs
drogue-tls/src/entropy/: context.rs  source.rs
drogue-tls/src/ffi/: mod.rs
drogue-tls/src/hash/: mod.rs
drogue-tls/src/net/: tcp_stack.rs
drogue-tls/src/pk/: dhparam.rs  ec.rs  mod.rs  rfc6979.rs
drogue-tls/src/pkcs12/: mod.rs
drogue-tls/src/platform/: cortex_alloc.rs  mod.rs
drogue-tls/src/platform/alloc/: hole.rs  layout.rs  mod.rs
drogue-tls/src/rng/: ctr_drbg.rs  hmac_drbg.rs  mod.rs  os_entropy.rs  rdrand.rs
drogue-tls/src/ssl/: ciphersuites.rs  config.rs  context.rs  mod.rs  ticket.rs
drogue-tls/src/x509/: certificate.rs  crl.rs  csr.rs  mod.rs  profile.rs
drogue-tls/tests/: bignum.rs  client_server.rs  ec.rs  mbedtls_self_tests.rs  pbkdf.rs  rsa.rs  save_restore.rs  ssl_conf_ca_cb.rs  ssl_conf_verify.rs
drogue-tls/tests/data/: 3certs.pfx  MetroTestCertificate.pfx  chain-int1.crt  chain-int2.crt  chain-leaf.crt  nomac.pfx  nomac_pass.pfx  nomaciter.pfx  pkijs_pkcs12.p12  sha2.pfx  twopass.pfx
drogue-tls/tests/support/: entropy.rs  keys.rs  mod.rs  net.rs  rand.rs
examples/: ping.rs  ping_embassy_smoltcp.rs
examples/blocking/: Cargo.toml  README.md
examples/blocking/src/: main.rs
examples/embassy/: Cargo.toml  README.md
examples/embassy/src/: main.rs  tuntap.rs
examples/nrf52/: Cargo.toml  README.md
examples/nrf52/.cargo/: config.toml
examples/nrf52/src/: main.rs
examples/tokio/: Cargo.toml  README.md
examples/tokio-psk/: Cargo.toml  README.md
examples/tokio-psk/src/: main.rs
examples/tokio/src/: main.rs
src/: alert.rs  application_data.rs  asynch.rs  blocking.rs  buffer.rs  certificate_types.rs  change_cipher_spec.rs  cipher_suites.rs  config.rs  connection.rs  content_types.rs  crypto_engine.rs  decoded_certificate.rs  der_certificate.rs  flush_policy.rs  fmt.rs  key_schedule.rs  lib.rs  max_fragment_length.rs  named_groups.rs  parse_buffer.rs  pki.rs  read_buffer.rs  record.rs  record_buffer.rs  record_reader.rs  session.rs  signature_schemes.rs  split.rs  supported_versions.rs  tls_connection.rs  tls_tcp_stack.rs  traits.rs  verify.rs  webpki.rs  write_buffer.rs
src/common/: decrypted_buffer_info.rs  decrypted_read_handler.rs  mod.rs
src/extensions/: client.rs  common.rs  extension_group_macro.rs  messages.rs  mod.rs  server.rs
src/extensions/extension_data/: alpn.rs  application_layer_protocol_negotiation.rs  certificate_authorities.rs  certificate_type.rs  cookie.rs  early_data.rs  heartbeat.rs  key_share.rs  max_fragment_length.rs  mod.rs  oid_filters.rs  padding.rs  post_handshake_auth.rs  pre_shared_key.rs  psk_key_exchange_modes.rs  server_name.rs  signature_algorithms.rs  signature_algorithms_cert.rs  signed_certificate_timestamp.rs  status_request.rs  supported_groups.rs  supported_versions.rs  unimplemented.rs  use_srtp.rs
src/extensions/messages/: client_hello.rs  encrypted_extensions.rs  extension_group_macro.rs  mod.rs  server_hello.rs
src/extensions/types/: application_layer_protocol_negotiation.rs  certificate_authorities.rs  certificate_type.rs  cookie.rs  early_data.rs  heartbeat.rs  key_share.rs  max_fragment_length.rs  mod.rs  oid_filters.rs  padding.rs  post_handshake_auth.rs  pre_shared_key.rs  psk_key_exchange_modes.rs  server_name.rs  signature_algorithms.rs  signature_algorithms_cert.rs  signed_certificate_timestamp.rs  status_request.rs  supported_groups.rs  supported_versions.rs  use_srtp.rs
src/handshake/: binder.rs  certificate.rs  certificate_request.rs  certificate_verify.rs  client_hello.rs  encrypted_extensions.rs  finished.rs  mod.rs  new_session_ticket.rs  server_hello.rs
tests/: client_cert_test.rs  client_test.rs  dtls_client.rs  early_data_test.rs  psk_test.rs  rustpki_rsa_test.rs  rustpki_test.rs  split_test.rs  testcert.pem  testkey.pem  tlsserver.rs  webpki_test.rs
tests/data/: ca-cert.pem  ca-key.pem  chain-cert.pem  client-cert.pem  client-key.pem  client.csr  gen_certs_and_keys.sh  im-cert.pem  im-key.pem  im-server-cert.pem  im-server-key.pem  im-server.csr  im.csr  rsa-ca-cert.pem  rsa-ca-key.pem  rsa-client-cert.csr  rsa-client-cert.pem  rsa-client-key.pem  rsa-server-cert.csr  rsa-server-cert.pem  rsa-server-key.pem  server-cert.pem  server-key.pem  server.csr
tests/data/new/: ca.crt  ca.key  ca.srl  cert.conf  client.crt  client.csr  client.key  server.conf  server.crt  server.csr  server.key  ssl.sh
