[package]
name = "embedded-tls"
version = "0.17.1"
edition = "2024"
description = "TLS 1.3 client with no_std support and no allocator"
documentation = "https://docs.rs/embedded-tls"
readme = "README.md"
homepage = "https://drogue.io"
repository = "https://github.com/drogue-iot/embedded-tls"
license = "Apache-2.0"
keywords = ["embedded", "async", "tls", "no_std", "network"]
exclude = [".github"]
rust-version = "1.86"

[dependencies]
portable-atomic = { version = "1.6.0", default-features = false }
p256 = { version = "0.14.0-pre.11", default-features = false, features = [
    "ecdh",
    "ecdsa",
    "pkcs8",
    "sha256",
] }
rand_core = { version = "0.9.3", default-features = false }
hkdf = "0.13.0-rc.1"
hmac = "0.13.0-rc.2"
sha2 = { version = "0.11.0-rc.2", default-features = false }
aes-gcm = { version = "0.11.0-rc.1", default-features = false, features = ["aes"] }
digest = "0.11.0-rc.2"
heapless = { version = "0.9.1", default-features = false }
embedded-io = { git = "https://github.com/rust-embedded/embedded-hal", rev = "ba020960dbe4dca076de999fa087edde021ef5df" }
embedded-io-async = { git = "https://github.com/rust-embedded/embedded-hal", rev = "ba020960dbe4dca076de999fa087edde021ef5df" }
embedded-io-adapters = { git = "https://github.com/rust-embedded/embedded-hal", rev = "ba020960dbe4dca076de999fa087edde021ef5df", optional = true }
webpki = { package = "rustls-webpki", version = "0.103.6", default-features = false, optional = true }
signature = { version = "3.0.0-rc.4", default-features = false }
ecdsa = { version = "0.17.0-rc.7", default-features = false }
thiserror = "2"
pkcs8 = { version = "0.11.0-rc.7", default-features = false }

# Logging alternatives
log = { version = "0.4", optional = true }
defmt = { version = "1.0.1", optional = true }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
mio = { version = "1.0.4", features = ["os-poll", "net"] }
rustls = { git = "https://github.com/rustls/rustls", rev = "96e7fdcb5ab65c8da13d0ea73ccfa85fc08ac712", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
log = "0.4"
pem-parser = "0.1.1"
openssl = "0.10.44"

[features]
default = ["std", "log", "tokio"]
defmt = ["dep:defmt", "embedded-io/defmt", "heapless/defmt"]
std = ["embedded-io/std", "embedded-io-async/std"]
tokio = ["embedded-io-adapters/tokio-1"]
alloc = []
