[package]
name = "embedded-tls"
version = "0.18.0"
edition = "2024"
description = "TLS 1.3 client with no_std support and no allocator"
documentation = "https://docs.rs/embedded-tls"
readme = "README.md"
homepage = "https://drogue.io"
repository = "https://github.com/drogue-iot/embedded-tls"
license = "Apache-2.0"
keywords = ["embedded", "async", "tls", "no_std", "network"]
exclude = [".github"]
rust-version = "1.87"

[dependencies]
portable-atomic = { version = "1.13.0", default-features = false }
p256 = { version = "=0.14.0-rc.4", default-features = false, features = [ "ecdh", "ecdsa", "pkcs8", "sha256" ] }
p384 = { version = "=0.14.0-rc.4", default-features = false, features = [ "ecdsa", "sha384" ], optional = true }
ed25519-dalek = { version = "2.2", default-features = false, optional = true }
rsa = { version = "=0.10.0-rc.12", default-features = false, features = ["sha2"], optional = true }
rand_core = { version = "=0.10.0-rc-3", default-features = false }
hkdf = "=0.13.0-rc.3"
hmac = "=0.13.0-rc.3"
sha2 = { version = "=0.11.0-rc.3", default-features = false }
aes-gcm = { version = "=0.11.0-rc.2", default-features = false, features = ["aes"] }
digest = "=0.11.0-rc.5"
heapless = { version = "0.9.2", default-features = false }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
embedded-io-adapters = { version = "0.7.0", optional = true }
webpki = { package = "rustls-webpki", version = "0.103.8", default-features = false, optional = true }
const-oid = { version = "0.10.2", optional = true }
der = { version = "=0.8.0-rc.10", features = ["derive", "oid", "time"], optional = true }
signature = { version = "=3.0.0-rc.6", default-features = false }
ecdsa = { version = "=0.17.0-rc.12", default-features = false }

# Logging alternatives
log = { version = "0.4", optional = true }
defmt = { version = "1.0.1", optional = true }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
mio = { version = "1.1.1", features = ["os-poll", "net"] }
# We deliberately disable default features to not pull in TLS 1.2 support.
rustls = { version = "0.23.36", features = ["ring", "std"], default-features = false }
rustls-pemfile = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
rand = "=0.10.0-rc.6"
log = "0.4"
pem-parser = "0.1.1"
openssl = "0.10.75"

[features]
default = ["std", "log", "tokio"]
defmt = ["dep:defmt", "embedded-io/defmt", "heapless/defmt"]
std = ["embedded-io/std", "embedded-io-async/std"]
tokio = ["embedded-io-adapters/tokio-1"]
alloc = []
webpki = ["dep:webpki"]
rustpki = ["dep:der","dep:const-oid"]
rsa = ["dep:rsa", "rustpki", "alloc"]
ed25519 = ["dep:ed25519-dalek", "rustpki"]
p384 = ["dep:p384", "rustpki"]
