[package]
name = "drogue-tls-sys"
version = "0.1.0"
authors = ["Bob McWhirter <bmcwhirt@redhat.com>"]
edition = "2018"

[lib]
name = "drogue_tls_sys"

[dependencies]
drogue-ffi-compat = "0.1.0"

[build-dependencies]
cmake = { version = "0.1.44" }
bindgen = { version = "0.53.1", optional=true }

[features]
default = []
generate = ["bindgen"]
