[package]
name = "drogue-tls"
version = "0.1.0"
authors = ["Bob McWhirter <bmcwhirt@redhat.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A no_std mbedTLS crate"
readme = "../README.md"
repository = "https://github.com/drogue-iot/drogue-tls"


[dependencies]
log = "0.4.11"
cstr_core = "0.2.2"
heapless = "0.5.5"
## REMOVE THIS ONE
cortex-m = "0.6.2"
drogue-network = "0.1.0"
nb = "0.1.2"
drogue-ffi-compat = "0.1.0"

[dependencies.drogue-tls-sys]
version = "0.1.0"
path = "../drogue-tls-sys"

