[package]
name = "ping-std"
version = "0.5.0"
edition = "2018"
authors = [
    "Bob McWhirter <bmcwhirt@redhat.com>",
    "Ulf Lilleengen <lulf@redhat.com>"
]

[dependencies]
embedded-tls = { path = "../..", features = ["log", "std"], default-features = false }
embedded-io = { version = "0.3.0", features = ["std"] }
pem-parser = "0.1"
env_logger = "0.8"
rand = "0.8"
log = "0.4"
