[package]
name = "ping-std"
version = "0.5.0"
edition = "2021"
authors = [
    "Bob McWhirter <bmcwhirt@redhat.com>",
    "Ulf Lilleengen <lulf@redhat.com>"
]

[dependencies]
embedded-tls = { path = "../..", features = ["log", "std", "webpki"], default-features = false }
embedded-io = { version = "0.5.0" }
embedded-io-adapters = { version = "0.5.0", features = ["std"] }
pem-parser = "0.1"
env_logger = "0.10"
rand = "0.8"
log = "0.4"
