[package]
name = "ping-embassy-net"
version = "0.5.0"
edition = "2021"
resolver = "2"

[dependencies]
embedded-tls = { path = "../..", features = ["alloc", "std", "log"], default-features = false }
env_logger = "0.10"
rand = "0.8"
log = "0.4"
static_cell = "1"
embassy-executor = { version = "0.4", features = ["task-arena-size-32768", "arch-std", "executor-thread", "log", "integrated-timers"] }
embassy-time = { version = "0.2", default-features = false, features = ["std"] }
smoltcp = { version = "0.11.0", features = ["dns-max-server-count-4"] }
embassy-net = { version = "0.3.0", features=[ "std", "log", "medium-ethernet", "medium-ip", "tcp", "udp", "dns", "dhcpv4", "proto-ipv6"] }
embassy-net-tuntap = { version = "0.1.0" }

async-io = "1.6.0"
futures = { version = "0.3.17" }
libc = "0.2.101"
clap = { version = "3.0", features = ["derive", "color"] }
heapless = { version = "0.8", default-features = false }
embedded-io-async = { version = "0.6" }
embedded-io-adapters = { version = "0.6", features = ["futures-03"] }
critical-section = { version = "1.1", features = ["std"] }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "51de518bd3edf15ffc76a55b6d003a633556ae56" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", rev = "51de518bd3edf15ffc76a55b6d003a633556ae56" }
embassy-net-tuntap = { git = "https://github.com/embassy-rs/embassy.git", rev = "51de518bd3edf15ffc76a55b6d003a633556ae56" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "51de518bd3edf15ffc76a55b6d003a633556ae56" }
