[package]
name = "ping-embassy-net"
version = "0.5.0"
edition = "2021"
resolver = "2"

[dependencies]
embedded-tls = { path = "../..", features = ["alloc", "std", "log"], default-features = false }
env_logger = "0.10"
rand = "0.8"
log = "0.4"
static_cell = "1"
embassy-executor = { version = "0.9", features = ["arch-std", "executor-thread", "log"] }
embassy-time = { version = "0.5", default-features = false, features = ["std"] }
smoltcp = { version = "0.12.0", features = ["dns-max-server-count-4"] }
embassy-net = { version = "0.8.0", features=[ "std", "log", "medium-ethernet", "medium-ip", "tcp", "udp", "dns", "dhcpv4", "proto-ipv6"] }
embassy-net-tuntap = { version = "0.1.0" }

async-io = "1.6.0"
futures = { version = "0.3.17" }
libc = "0.2.101"
clap = { version = "3.0", features = ["derive", "color"] }
heapless = { version = "0.8", default-features = false }
embedded-io-async = { version = "0.7" }
embedded-io-adapters = { version = "0.7", features = ["futures-03"] }
critical-section = { version = "1.1", features = ["std"] }
