[package]
name = "nrf52"
version = "0.5.0"
edition = "2018"
authors = [
    "Bob McWhirter <bmcwhirt@redhat.com>",
    "Ulf Lilleengen <lulf@redhat.com>"
]

[dependencies]
drogue-tls = { path = "../..", default-features = false }
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand_core = { version = "0.6.3", default-features = false }
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7", features = ["device"] }

nrf52833-hal = { version = "0.14", features = ["rt"] }
embedded-hal = { version = "0.2", features = ["unproven"] }
