[package]
name = "nrf52"
version = "0.5.0"
edition = "2021"
authors = [
    "Bob McWhirter <bmcwhirt@redhat.com>",
    "Ulf Lilleengen <lulf@redhat.com>"
]

[dependencies]
embedded-tls = { path = "../..", default-features = false }
embedded-io = "0.5.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand_core = { version = "0.6.3", default-features = false }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }

nrf52833-hal = { version = "0.16", features = ["rt"] }
embedded-hal = { version = "1.0.0-rc.1" }
