[package]
name = "ping-tokio-psk"
version = "0.5.0"
edition = "2021"

[dependencies]
embedded-tls = { path = "../..", features = ["log", "tokio"] }
embedded-io = { version = "0.4.0", features = ["tokio"] }
env_logger = "0.8"
tokio = { version = "1.7", features = ["full"] }
rand = "0.8"
log = "0.4"
pem-parser = "0.1.1"
