[package]
name = "ping-tokio-psk"
version = "0.5.0"
edition = "2021"

[dependencies]
embedded-tls = { path = "../..", features = ["log", "tokio"] }
embedded-io-adapters = { version = "0.7", features = ["tokio-1"] }
embedded-io-async = "0.7"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
log = "0.4"
pem-parser = "0.1.1"
