[package]
name = "ping-tokio"
version = "0.2.0"
edition = "2018"
authors = [
    "Bob McWhirter <bmcwhirt@redhat.com>",
    "Ulf Lilleengen <lulf@redhat.com>"
]

[dependencies]
drogue-tls = { path = "../..", features = ["log"] }
env_logger = "0.8"
tokio = { version = "1.7", features = ["full"] }
rand = "0.8"
log = "0.4"