[package]
name = "ping-tokio"
version = "0.5.0"
edition = "2018"
authors = [
    "Bob McWhirter <bmcwhirt@redhat.com>",
    "Ulf Lilleengen <lulf@redhat.com>"
]

[dependencies]
embedded-tls = { path = "../..", features = ["log", "tokio"] }
embedded-io = { version = "0.3.0", features = ["tokio"] }
env_logger = "0.8"
tokio = { version = "1.7", features = ["full"] }
rand = "0.8"
log = "0.4"
pem-parser = "0.1.1"
