[package]
name = "ping-tokio"
version = "0.5.0"
edition = "2021"
authors = [
    "Bob McWhirter <bmcwhirt@redhat.com>",
    "Ulf Lilleengen <lulf@redhat.com>"
]

[dependencies]
embedded-tls = { path = "../..", features = ["log", "tokio"] }
embedded-io-adapters = { version = "0.6.0", features = ["tokio-1"] }
embedded-io-async = "0.6.0"
env_logger = "0.10"
tokio = { version = "1.7", features = ["full"] }
rand = "0.8"
log = "0.4"
pem-parser = "0.1.1"
